<resources>
    <string name="app_name">推流Demo</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="splash_background">splash background</string>
    <string name="popup_live_set">直播设置</string>
    <string name="popup_live_screen">横竖屏</string>
    <string name="popup_live_landscape">横屏直播</string>
    <string name="popup_live_portrait">竖屏直播</string>
    <string name="popup_live_source_url">直播源流地址</string>
    <string name="start_live">开始直播</string>
    <string name="time_begin">00:00:00</string>
    <string name="live_ing">直播中 00:00:00</string>
    <string name="record_ing">录制中 00:00:00</string>
    <string name="function">功能</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_url">我们提供一条基于rtmp协议的直播推流地址，您也可以使用其他有效的直播源流地址</string>
    <string name="unit_bitrate">kbps</string>
    <string name="unit_frame_rate">fps</string>
    <string name="hint_frame_rate">设置帧率</string>
    <string name="hint_bitrate">设置码率</string>
    <string name="menu_beauty">美颜</string>
    <string name="menu_face_u">AR/动画</string>
    <string name="menu_logo">水印</string>
    <string name="menu_audio_play_off">耳返/关</string>
    <string name="menu_audio_play_on">耳返/开</string>
    <string name="menu_denoise_off">降噪/关</string>
    <string name="menu_denoise_on">降噪/开</string>
    <string name="menu_flip_off">镜像/关</string>
    <string name="menu_flip_on">镜像/开</string>
    <string name="menu_adaptive_bitrate">自适应码率</string>
    <string name="menu_weak_net_live">弱网直播</string>
    <string name="menu_hevc_setting">编码格式</string>
    <string name="menu_h264">H.265</string>
    <string name="menu_mute_off">静音/关</string>
    <string name="menu_mute_on">静音/开</string>
    <string name="menu_log_off">日志/关</string>
    <string name="menu_log_on">日志/开</string>
    <string name="beauty_level_0">无</string>
    <string name="beauty_level_1">1</string>
    <string name="beauty_level_2">2</string>
    <string name="beauty_level_3">3</string>
    <string name="beauty_level_4">4</string>
    <string name="beauty_level_5">5</string>
    <string name="finish">完成</string>
    <string name="suggest_bitrate">推荐值：</string>
    <string name="bitrate_100">100</string>
    <string name="bitrate_200">200</string>
    <string name="bitrate_300">300</string>
    <string name="bitrate_400">400</string>
    <string name="udp_tip_summay">弱网直播可克服以下三大问题：</string>
    <string name="udp_tip_1">户外直播，网络不稳定</string>
    <string name="udp_tip_2">连接被重置，断线重连</string>
    <string name="udp_tip_3">GPRS/2G/3G/4G切换时，内容发送不出去</string>
    <string name="udp_tip_4">　udp:性能更好</string><!--fec:延迟更低　　-->
    <string name="udp_off">upd已关闭</string>
    <string name="udp_no_fec">udp已开启</string>
    <string name="avc">H264</string>
    <string name="hevc">H265</string>
    <string name="prompt">提示</string>
    <string name="end_live">结束直播</string>
    <string name="continue_live">继续直播</string>
    <string name="end_record">结束录制</string>
    <string name="continue_record">继续录制</string>
    <string name="saving_vod">正在保存视频...</string>
    <string name="adaptive_bitrate_tip_1">保证音视频传输质量</string>
    <string name="adaptive_bitrate_tip_2">降低直播延时</string>
    <string name="adaptive_bitrate_tip_3">减少数据丢失</string>
    <string name="adaptive_bitrate_tip_4">提升直播体验</string>
    <string name="adaptive_bitrate_tip_title">自适应码率特性</string>
    <string name="exit_prompt">再按一次返回退出</string>
    <string name="save_path">保存路径</string>
    <string name="popup_record_portrait">竖屏录制</string>
    <string name="popup_record_landscape">横屏录制</string>
    <string name="start_record">开始录制</string>
</resources>
