<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@null"
              android:orientation="vertical"
              >

    <TextView
        android:layout_marginTop="@dimen/dp_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_20"
        android:text="@string/udp_tip_summay"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_15"/>

    <TextView
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:drawableLeft="@drawable/shape_blue_dot"
        android:drawablePadding="@dimen/dp_4"
        android:text="@string/udp_tip_1"
        android:textColor="@color/colorWhiteLight"
        android:textSize="@dimen/sp_14"/>

    <TextView
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:drawableLeft="@drawable/shape_blue_dot"
        android:drawablePadding="@dimen/dp_4"
        android:text="@string/udp_tip_2"
        android:textColor="@color/colorWhiteLight"
        android:textSize="@dimen/sp_14"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:drawableLeft="@drawable/shape_blue_dot"
        android:drawablePadding="@dimen/dp_4"
        android:text="@string/udp_tip_3"
        android:textColor="@color/colorWhiteLight"
        android:layout_marginBottom="@dimen/dp_8"
        android:textSize="@dimen/sp_14"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:text="@string/udp_tip_4"
        android:textColor="@color/colorWhiteLight"
        android:layout_marginBottom="@dimen/dp_16"
        android:textSize="@dimen/sp_14"/>

</LinearLayout>